# komparu

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.ru.md  pyproject.toml
benchmarks/: README.md  bench_dir.py  bench_file.py  bench_memory.py  conftest.py  gen_charts.py  run_all.py
benchmarks/competitors/: Makefile  compare.go  compare.rs
benchmarks/results/: REPORT.md  all_results.json  file_results.json  file_results.md  memory_results.json  memory_results.md
docs/en/: api.md  architecture.md  edge-cases.md  requirements.md  security.md  workplan.md
docs/ru/: api.md  architecture.md  edge-cases.md  requirements.md  security.md  workplan.md
src/_core/: async_curl.c  async_curl.h  async_task.c  async_task.h  compare.c  compare.h  compat.h  curl_share.c  curl_share.h  dirwalk.c  dirwalk.h  module.c  module.h  pool.c  pool.h  reader.h  reader_archive.c  reader_archive.h  reader_file.c  reader_file.h  reader_http.c  reader_http.h
src/komparu/: __init__.py  _api.py  _config.py  _helpers.py  _types.py  _validate.py  aio.py
tests/: conftest.py  test_async.py  test_compare_archive.py  test_compare_dir.py  test_compare_http.py  test_compare_local.py  test_config.py  test_parallel.py  test_validation.py
